--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.89.0",
     "expo": "~54.0.25",
+    "expo-av": "~16.0.8",
     "expo-constants": "^18.0.11",
     "expo-linking": "^8.0.10",
     "expo-router": "^6.0.17",
@@ -33,6 +34,7 @@
     "react-native-web": "^0.21.2"
   },
   "devDependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@types/react": "~19.1.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.9.2"
