--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "expo": "~54.0.25",
     "expo-av": "~16.0.8",
     "expo-constants": "^18.0.11",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "^8.0.10",
+    "expo-localization": "^17.0.8",
     "expo-router": "^6.0.17",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "^31.0.12",
     "expo-status-bar": "~3.0.9",
+    "i18next": "^25.8.0",
     "lucide-react-native": "^0.556.0",
     "nativewind": "^4.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.5.4",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-modal": "14.0.0-rc.1",
