--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.89.0",
     "expo": "~54.0.25",
+    "expo-auth-session": "~7.0.10",
     "expo-av": "~16.0.8",
     "expo-constants": "^18.0.11",
     "expo-linear-gradient": "~15.0.8",
-    "expo-linking": "^8.0.10",
+    "expo-linking": "~8.0.11",
     "expo-localization": "^17.0.8",
     "expo-router": "^6.0.17",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "^31.0.12",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "i18next": "^25.8.0",
     "lucide-react-native": "^0.556.0",
     "nativewind": "^4.0.1",
